--- a/pset-4/pset-4.Rmd
+++ b/pset-4/pset-4.Rmd
@@ -13,7 +13,7 @@ header-includes:
               urlcolor  = blue,
               citecolor = blue,
               anchorcolor = blue]{hyperref}
-- \newcommand{\MYhref}[3][blue]{\href{#2}{\color{#1}{#3}}}
+- \newcommand{\newref}[3][blue]{\href{#2}{\color{#1}{#3}}}
 ---
 
 <!-- Configuracion de la consola de R -->
@@ -28,9 +28,9 @@ En este taller se evalúan los temas vistos en las clases 11 y 13 del curso. Lea
 
 - Este taller representa el **25%** de la nota total del curso y puede ser realizado de manera individual o en grupos de hasta 3 personas. En las primeras líneas del script, escriba su nombre, código y la versión de R que está utilizando. Además, al inicio del código, debe incluir las librerías que utilizará en la sesión, por ejemplo: `pacman`, `rio`, `data.table`, `tidyverse`, `sf`, y `rvest`.
 
-- Asegúrese de descargar las bases de datos desde el repositorio <https://github.com/taller-r-202403/problem-sets> y de crear un nuevo repositorio en su cuenta de GitHub. Si trabaja en grupo, solo un integrante debe crear el repositorio y compartir el acceso con los demás. El repositorio debe ser público para permitir el acceso desde cualquier cuenta de GitHub. Incluya al menos tres carpetas en el repositorio: `input` (datos originales), `output` (datos procesados), y `code` (script con la respuesta del taller).
+- Asegúrese de crear un nuevo repositorio en su cuenta de GitHub. Si trabaja en grupo, solo un integrante debe crear el repositorio y compartir el acceso con los demás. El repositorio debe ser público para permitir el acceso desde cualquier cuenta de GitHub. Incluya al menos tres carpetas en el repositorio: `input` (datos originales), `output` (datos procesados), y `code` (script con la respuesta del taller).
 
-- Todos los integrantes del grupo deben publicar el enlace al repositorio de GitHub en la actividad **Problem-set-3** del Bloque Neón antes de las 23:59 horas del 26 de abril de 2024.
+- Todos los integrantes del grupo deben publicar el enlace al repositorio de GitHub en la actividad **Problem-set-4** del Bloque Neón antes de las 23:59 horas del 06 de junio de 2024.
 
 - Por favor, organice su trabajo cuidadosamente y comente paso a paso cada línea de código. Recuerde **NO** usar acentos ni caracteres especiales dentro del código para evitar problemas al abrir los scripts en diferentes sistemas operativos.
 
@@ -39,54 +39,49 @@ En este taller se evalúan los temas vistos en las clases 11 y 13 del curso. Lea
 <!-------- Solucionar: ----------->
 \begin{center} \textcolor{blue}{\subsection{Solucionar:}} \end{center}
 
-Se debe emplear un bucle o una función para importar los archivos de la Gran Encuesta Integrada de Hogares que se encuentran en la carpeta `input`. Además, si es necesario, se puede acceder al \MYhref{https://microdatos.dane.gov.co/index.php/catalog/782/data-dictionary}{diccionario} o descargar el documento \MYhref{https://www.dane.gov.co/files/operaciones/GEIH/bol-GEIH-dic2023.pdf}{técnico} de los datos.
+Para resolver este problem set, deberá poner en práctica los conocimientos adquiridos en la clase de \textit{web-scraping} y gestionar la información \textit{GIS} que extraerá de internet. Finalmente, empleará \textit{R-Markdown} para generar un HTML que posteriormente podrá publicar en su página de \textit{GitHub}.
 
-<!------------------->
+## **1. Extraer la información de internet (50%)**
 
-## **1. Bucle (35%)**
+Primero, debe dirigirse a la página \newref{https://eduard-martinez.github.io/pset-4.html}{https://eduard-martinez.github.io/pset-4.html} y examinar su contenido.
 
--   **1.1** **Lista de archivos** `input`
+-   **1.1** **Obtener las URL**
 
-Cree un objeto que almacene el vector de nombres de los archivos dentro de la carpeta `input`. Asegúrese de que cada archivo contenga la ruta con la ubicación de cada archivo.
+Cree un objeto llamdo `url_full` que almacene el vector de URLs contenidas en la página \newref{https://eduard-martinez.github.io/pset-4.html}{../pset-4.html}.
 
-**Hint:** Para este punto, puede usar la función `list.files()` con el argumento `recursive = T`.
+-   **1.2** **Filtrar URL:**
 
--   **1.2** **Importar archivos:**
+Del objeto `url_full` mantenga únicamente las URLs que contengan la palabra `propiedad`, guarde el resultado en un objeto llamado `url_subset`. 
 
-Usa el objeto creado en el punto anterior como insumo de una función que permita importar los archivos de `Fuerza de trabajo`, `No ocupados` y `Ocupados` para todos los meses.
+-   **1.3 Extraer las tablas de los HTML:**
 
-**Hint:** Para este punto, puedes crear una función que importe un archivo y combinarla con la función `lapply`. O puedes crear un bucle y almacenar los dataframes en un objeto tipo lista.
+Utilice un bucle o función que itere sobre todos los elementos del objeto `url_subset`. Para cada URL, extraiga de su correspondiente HTML la tabla que contiene la información de las coordenadas y el precio de la propiedad. Almacene el resultado de este loop en un objeto tipo lista llamado `lista_tablas`.
 
--   **1.3 Combinar conjuntos de datos**
+-   **1.4 Preparar información:**
 
-Combina todos los `data.frame` que importaste en el punto anterior tres `data.frame`.
+Utilice la función `rbindlist` del paquete `data.table` para convertir la lista `lista_tablas` en un dataframe. Almacene este resultado en un objeto llamado `db_house`, que contendrá toda la información de las tablas.
 
-**Hint:** Para este punto, puede usar la función `rbindlist` de la librería `data.table`.
+## **2. Manipular la información GIS (50%)**
 
-<!------------------->
+-   **2.1 Cree un objeto `sf`**
 
-## **2. Preparación (35%)**
+Utilice la función `st_as_sf` del paquete `sf` para convertir el objeto `db_house` en un `SimpleFeature` de tipo punto. Nombre este nuevo objeto `sf_house`.
 
--   **2.1 Creación d bases de datos**
+-   **2.2 Pintar mapa**
 
-Cree tres bases de datos diferentes:
+Utilice la función `geom_sf` de la librería `ggplot2` para crear un mapa que visualice los puntos almacenados en el objeto `sf_house`. Utilice el valor de la vivienda como escala de colores, aplicando las paletas de colores de la función `scale_fill_viridis`. Una vez generado el mapa, exporte este objeto en formato `.pdf`.
 
-1.  Usando la base de datos llamada `fuerza de trabajo`, suma el número de individuos que hacen parte de la fuerza laboral (**ft == 1**) y aquellos que hacen parte de la población en edad de trabajar (**pet == 1**) por mes, asegurándote de tener en cuenta el factor de expansión.
+## **3. Bonos:**
 
-2.  Usando la base de datos llamada `Ocupados`, suma el número de individuos que se encuentren empleados (**ft == 1**) por mes, asegurándote de tener en cuenta el factor de expansión.
+Si resuelve al menos uno de los dos bonos, obtendrá un 5 en el problem-set. Si resuelve los dos bonos, recibirá un 5 como nota final del curso.
 
-3.  Usando la base de datos llamada `No ocupados`, suma el número de individuos desempleados (**dsi == 1**) por mes, asegurándote de tener en cuenta el factor de expansión."
+-   **3.1 `R-Markdown`**
 
--   **2.2 Colapsar datos a nivel mensual**
+Resuelva este problem-set utilizando `R-Markdown`. Debe generar un archivo `HTML` que contenga las respuestas. Incluya tablas y/o gráficos con algunas estadísticas descriptivas de los datos y escriba un pequeño párrafo con el análisis de las tablas y/o mapas. Otros analísis son bienvenidos.
 
-Unifica todas las bases de datos creadas en el punto anterior en una única base llamada `Output`, que debe contener al menos cinco columnas: `Población en edad de trabajar`, `fuerza laboral`, `ocupados`, `desempleados` y el `mes` correspondiente.
+-   **3.2 `GitHub`**
 
--   **2.3 Tasas de desempleo y ocupación.**
+Suba el archivo `HTML` generado en el punto anterior a su repositorio de `GitHub` donde almacena su página web. Comparta la `URL` del `HTML` publicado en su página web.
 
-Divida el número de individuos `desempleados` por la `fuerza laboral` para obtener la tasa de desempleo, y los `ocupados` por la `población en edad` de trabajar para obtener la tasa de ocupación.
 
-<!------------------->
 
-## **3. GGplot2 (30%)**
-
-Grafique las tasas de desempleo y ocupación para cada mes utilizando la función `geom_line`. (**Hint:** Realice un pivot wider a las tasas de modo que los valores estén en una sola columna)
