--- a/pset-3/pset-3.Rmd
+++ b/pset-3/pset-3.Rmd
@@ -13,7 +13,7 @@ header-includes:
               urlcolor  = blue,
               citecolor = blue,
               anchorcolor = blue]{hyperref}
-- \newcommand{\MYhref}[3][blue]{\href{#2}{\color{#1}{#3}}}
+- \newcommand{\newref}[3][blue]{\href{#2}{\color{#1}{#3}}}
 ---
 
 <!-- Configuracion de la consola de R -->
@@ -39,7 +39,7 @@ En este taller se evalúan los temas vistos en las clases 7 y 10 del curso. Lea 
 <!-------- Solucionar: ----------->
 \begin{center} \textcolor{blue}{\subsection{Solucionar:}} \end{center}
 
-Se debe emplear un bucle o una función para importar los archivos de la Gran Encuesta Integrada de Hogares que se encuentran en la carpeta `input`. Además, si es necesario, se puede acceder al \MYhref{https://microdatos.dane.gov.co/index.php/catalog/782/data-dictionary}{diccionario} o descargar el documento \MYhref{https://www.dane.gov.co/files/operaciones/GEIH/bol-GEIH-dic2023.pdf}{técnico} de los datos.
+Se debe emplear un bucle o una función para importar los archivos de la Gran Encuesta Integrada de Hogares que se encuentran en la carpeta `input`. Además, si es necesario, se puede acceder al \newref{https://microdatos.dane.gov.co/index.php/catalog/782/data-dictionary}{diccionario} o descargar el documento \newref{https://www.dane.gov.co/files/operaciones/GEIH/bol-GEIH-dic2023.pdf}{técnico} de los datos.
 
 <!------------------->
 
