--- a/pset-4/Rmarkdown.Rmd
+++ b/pset-4/Rmarkdown.Rmd
@@ -74,7 +74,7 @@ print(db_house)
 ```
 
 
-2. NIPULAR LA INFORMACIÓN GIS
+2. MANIPULAR LA INFORMACIÓN GIS
 
 Convertir `db_house` en SimpleFeature
 
@@ -104,6 +104,15 @@ Guardar el Mapa en Pdf
 ggsave("mapa_valores_vivienda.pdf", plot = map, device = "pdf")
 ```
 
+Conclusiones
+conclusion de las estadisticas
+En base a las estadísticas podemos observar que el precio de
+las viviendas es considerablemente alto, pues la media se encuentra en  $1,399,712,145.
+No obstante, esta cifra también sugiere que pueden existir valores atípicos, que rondan 
+en precios extremadamente altos, que podrían influir en el resultado. Por otro lado,
+la desviación estándar nos presenta una variabilidad en los precios, es decir,
+estos oscilan en un rango amplio entre diferentes viviendas. Dicha observación 
+es consistente con la disparidad económica entre los estudiantes.
 
 
 
